k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yellowbooks
  labels:
    name: yellowbooks
    environment: production
