k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: yellowbooks
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: yellowbooks
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
